@@ -7,7 +7,7 @@ recommend switching on --infer in order to avoid obscure type error messages.
 %token <int> B
 %token <int> A
 
-%type <int list> phrase
+%type <int> phrase
 %%
 
 foo:
