@@ -1,0 +1,61 @@
+Warning: you are using the standard library and/or the %inline keyword. We
+recommend switching on --infer in order to avoid obscure type error messages.
+%{ type ('a, 'b) either = Left of 'a | Right of 'b %}
+%start phrase
+%token <int> EOF
+%token <int> D
+%token <int> C
+%token <int> B
+%token <int> A
+
+%type <(int, int) either> phrase
+%%
+
+mixed_list_C_D_:
+  _1 = list___anonymous_0_C_D__
+    {    ( _1 )}
+
+mixed_list_A_B_:
+  _1 = list___anonymous_0_A_B__
+    {    ( _1 )}
+
+phrase:
+  xs = mixed_list_A_B_ ys = mixed_list_C_D_ _3 = EOF
+    {    ( xs @ ys )}
+
+list___anonymous_0_C_D__:
+  
+    {    ( [] )}
+| x0 = C xs = list___anonymous_0_C_D__
+    {let x =
+  let x = x0 in
+            ( Left  x )
+in
+    ( x :: xs )}
+| y0 = D xs = list___anonymous_0_C_D__
+    {let x =
+  let y = y0 in
+            ( Right y )
+in
+    ( x :: xs )}
+
+list___anonymous_0_A_B__:
+  
+    {    ( [] )}
+| x0 = A xs = list___anonymous_0_A_B__
+    {let x =
+  let x = x0 in
+            ( Left  x )
+in
+    ( x :: xs )}
+| y0 = B xs = list___anonymous_0_A_B__
+    {let x =
+  let y = y0 in
+            ( Right y )
+in
+    ( x :: xs )}
+
+%%
+
+
+
