@@ -1,6 +1,8 @@
 2016/05/18:
 Anonymous rules now work also when used inside a parameterized rule.
-(This did not work until now.)
+(This did not work until now.) When an anonymous rule is hoisted out
+of a parameterized rule, it may itself become parameterized. Menhir
+parameterizes it only over the parameters that it actually needs.
 
 2016/05/04:
 In the Coq backend, split the largest definitions into smaller
